@@ -1,3 +1,4 @@
+2018-10-01 Added setText in Paragraph
 2018-09-19 Fixed issue with decimals in Math
 2018-09-19 Unifed visiblity settings in preview for multiple addons
 2018-09-17 Fixed issue with Audio progress bard
